-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 18
-
Component/s: hotspot
-
b29
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8269446 | 18 | Jatin Bhateja | P3 | Resolved | Fixed | b04 |
| JDK-8270633 | 17.0.1 | Jatin Bhateja | P3 | Resolved | Fixed | b03 |
assert(Matcher::vector_size_supported(elem_bt, length)) failed: length in range
V [jvm.dll+0x4c65b7] report_vm_error+0xb7 (debug.cpp:282)
V [jvm.dll+0xca7ffc] TypeVect::make+0x8c (type.cpp:2351)
V [jvm.dll+0x914e7a] LibraryCallKit::inline_vectorizedMismatch+0x33a (library_call.cpp:5315)
V [jvm.dll+0x919227] LibraryCallKit::try_to_inline+0x1977 (library_call.cpp:580)
V [jvm.dll+0x8fa056] LibraryIntrinsic::generate+0x196 (library_call.cpp:118)
V [jvm.dll+0x545618] Parse::do_call+0x9c8 (doCall.cpp:629)
V [jvm.dll+0xb072c3] Parse::do_one_bytecode+0x32f3 (parse2.cpp:2715)
V [jvm.dll+0xaf93d7] Parse::do_one_block+0x437 (parse1.cpp:1566)
V [jvm.dll+0xaf7dcd] Parse::do_all_blocks+0x5cd (parse1.cpp:710)
V [jvm.dll+0xaf434d] Parse::Parse+0xc2d (parse1.cpp:616)
V [jvm.dll+0x3b6495] ParseGenerator::generate+0xa5 (callGenerator.cpp:103)
V [jvm.dll+0x545618] Parse::do_call+0x9c8 (doCall.cpp:629)
V [jvm.dll+0xb072c3] Parse::do_one_bytecode+0x32f3 (parse2.cpp:2715)
V [jvm.dll+0xaf93d7] Parse::do_one_block+0x437 (parse1.cpp:1566)
V [jvm.dll+0xaf7dcd] Parse::do_all_blocks+0x5cd (parse1.cpp:710)
V [jvm.dll+0xaf434d] Parse::Parse+0xc2d (parse1.cpp:616)
V [jvm.dll+0x3b6495] ParseGenerator::generate+0xa5 (callGenerator.cpp:103)
V [jvm.dll+0x47bf6e] Compile::Compile+0xfde (compile.cpp:705)
V [jvm.dll+0x3b1b7c] C2Compiler::compile_method+0x10c (c2compiler.cpp:106)
V [jvm.dll+0x494f7e] CompileBroker::invoke_compiler_on_method+0x94e (compileBroker.cpp:2312)
V [jvm.dll+0x4925b7] CompileBroker::compiler_thread_loop+0x2b7 (compileBroker.cpp:1986)
V [jvm.dll+0x4c65b7] report_vm_error+0xb7 (debug.cpp:282)
V [jvm.dll+0xca7ffc] TypeVect::make+0x8c (type.cpp:2351)
V [jvm.dll+0x914e7a] LibraryCallKit::inline_vectorizedMismatch+0x33a (library_call.cpp:5315)
V [jvm.dll+0x919227] LibraryCallKit::try_to_inline+0x1977 (library_call.cpp:580)
V [jvm.dll+0x8fa056] LibraryIntrinsic::generate+0x196 (library_call.cpp:118)
V [jvm.dll+0x545618] Parse::do_call+0x9c8 (doCall.cpp:629)
V [jvm.dll+0xb072c3] Parse::do_one_bytecode+0x32f3 (parse2.cpp:2715)
V [jvm.dll+0xaf93d7] Parse::do_one_block+0x437 (parse1.cpp:1566)
V [jvm.dll+0xaf7dcd] Parse::do_all_blocks+0x5cd (parse1.cpp:710)
V [jvm.dll+0xaf434d] Parse::Parse+0xc2d (parse1.cpp:616)
V [jvm.dll+0x3b6495] ParseGenerator::generate+0xa5 (callGenerator.cpp:103)
V [jvm.dll+0x545618] Parse::do_call+0x9c8 (doCall.cpp:629)
V [jvm.dll+0xb072c3] Parse::do_one_bytecode+0x32f3 (parse2.cpp:2715)
V [jvm.dll+0xaf93d7] Parse::do_one_block+0x437 (parse1.cpp:1566)
V [jvm.dll+0xaf7dcd] Parse::do_all_blocks+0x5cd (parse1.cpp:710)
V [jvm.dll+0xaf434d] Parse::Parse+0xc2d (parse1.cpp:616)
V [jvm.dll+0x3b6495] ParseGenerator::generate+0xa5 (callGenerator.cpp:103)
V [jvm.dll+0x47bf6e] Compile::Compile+0xfde (compile.cpp:705)
V [jvm.dll+0x3b1b7c] C2Compiler::compile_method+0x10c (c2compiler.cpp:106)
V [jvm.dll+0x494f7e] CompileBroker::invoke_compiler_on_method+0x94e (compileBroker.cpp:2312)
V [jvm.dll+0x4925b7] CompileBroker::compiler_thread_loop+0x2b7 (compileBroker.cpp:1986)
- backported by
-
JDK-8269446 compiler/intrinsics/VectorizedMismatchTest.java failed with failed: length in range
-
- Resolved
-
-
JDK-8270633 compiler/intrinsics/VectorizedMismatchTest.java failed with failed: length in range
-
- Resolved
-