8268482: compiler/intrinsics/VectorizedMismatchTest.java failed with failed: length in range

Reviewed-by: vlivanov, neliasso